[tool.poetry]
name = "pubmed-pharma-finder"
version = "0.1.0"
description = "Find PubMed papers with pharmaceutical/biotech company authors"
authors = ["sanjay"]
license = "MIT"
readme = "README.md"
packages = [{include = "pubmed_pharma_finder.py"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_pharma_finder:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"